Поиск по всем и логирование событий
